--- a/project-origin/public/mix-manifest.json
+++ b/project-origin/public/mix-manifest.json
@@ -1,4 +1,6 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/css/app.css": "/css/app.css",
+    "/css/checkout-form.css": "/css/checkout-form.css",
+    "/css/subscription-form.css": "/css/subscription-form.css"
 }
